--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Workout App</string>
-    <string name="title_activity_xsquats">X Squats</string>
+    <string name="title_activity_xsquats">xsquats</string>
     <string name="title_activity_abdominals">abdominals</string>
     <string name="title_activity_advancedreach">advancedreach</string>
 </resources>
