Added bicycles page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_advancedreach">advancedreach</string>
     <string name="title_activity_back">back</string>
     <string name="title_activity_biceps">biceps</string>
+    <string name="title_activity_bicycles">bicycles</string>
 </resources>
