Added burpees page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_back">back</string>
     <string name="title_activity_biceps">biceps</string>
     <string name="title_activity_bicycles">bicycles</string>
+    <string name="title_activity_burpees">burpees</string>
 </resources>
