--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_biceps">biceps</string>
     <string name="title_activity_bicycles">bicycles</string>
     <string name="title_activity_burpees">burpees</string>
+    <string name="title_activity_calfraises">calfraises</string>
 </resources>
