--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_bicycles">bicycles</string>
     <string name="title_activity_burpees">burpees</string>
     <string name="title_activity_calfraises">calfraises</string>
+    <string name="title_activity_calves">calves</string>
 </resources>
