Added crunches page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="title_activity_burpees">burpees</string>
     <string name="title_activity_calfraises">calfraises</string>
     <string name="title_activity_calves">calves</string>
+    <string name="title_activity_crunches">crunches</string>
 </resources>
