Added diamond push ups page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_activity_calfraises">calfraises</string>
     <string name="title_activity_calves">calves</string>
     <string name="title_activity_crunches">crunches</string>
+    <string name="title_activity_diamondpushups">diamondpushups</string>
 </resources>
