Added flutter kicks page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_calves">calves</string>
     <string name="title_activity_crunches">crunches</string>
     <string name="title_activity_diamondpushups">diamondpushups</string>
+    <string name="title_activity_flutterkicks">flutterkicks</string>
 </resources>
