--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="title_activity_crunches">crunches</string>
     <string name="title_activity_diamondpushups">diamondpushups</string>
     <string name="title_activity_flutterkicks">flutterkicks</string>
+    <string name="title_activity_gluteusmuscles">gluteusmuscles</string>
 </resources>
