Added jumping jacks page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="title_activity_gluteusmuscles">gluteusmuscles</string>
     <string name="title_activity_highknees">highknees</string>
     <string name="title_activity_hyperextensions">hyperextensions</string>
+    <string name="title_activity_jumpingjacks">jumpingjacks</string>
 </resources>
