Added jump knee tucks page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="title_activity_highknees">highknees</string>
     <string name="title_activity_hyperextensions">hyperextensions</string>
     <string name="title_activity_jumpingjacks">jumpingjacks</string>
+    <string name="title_activity_jumpkneetucks">jumpkneetucks</string>
 </resources>
