Added jump squats page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="title_activity_hyperextensions">hyperextensions</string>
     <string name="title_activity_jumpingjacks">jumpingjacks</string>
     <string name="title_activity_jumpkneetucks">jumpkneetucks</string>
+    <string name="title_activity_jumpsquats">jumpsquats</string>
 </resources>
