Added layzboy page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="title_activity_jumpingjacks">jumpingjacks</string>
     <string name="title_activity_jumpkneetucks">jumpkneetucks</string>
     <string name="title_activity_jumpsquats">jumpsquats</string>
+    <string name="title_activity_layzboy">layzboy</string>
 </resources>
