--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="title_activity_jumpkneetucks">jumpkneetucks</string>
     <string name="title_activity_jumpsquats">jumpsquats</string>
     <string name="title_activity_layzboy">layzboy</string>
+    <string name="title_activity_lunges">lunges</string>
 </resources>
