Added one legged squats page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="title_activity_jumpsquats">jumpsquats</string>
     <string name="title_activity_layzboy">layzboy</string>
     <string name="title_activity_lunges">lunges</string>
+    <string name="title_activity_oneleggedsquats">oneleggedsquats</string>
 </resources>
