--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="title_activity_layzboy">layzboy</string>
     <string name="title_activity_lunges">lunges</string>
     <string name="title_activity_oneleggedsquats">oneleggedsquats</string>
+    <string name="title_activity_pectorals">pectorals</string>
 </resources>
