Added planks page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="title_activity_lunges">lunges</string>
     <string name="title_activity_oneleggedsquats">oneleggedsquats</string>
     <string name="title_activity_pectorals">pectorals</string>
+    <string name="title_activity_planks">planks</string>
 </resources>
