--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="title_activity_oneleggedsquats">oneleggedsquats</string>
     <string name="title_activity_pectorals">pectorals</string>
     <string name="title_activity_planks">planks</string>
+    <string name="title_activity_pushups">pushups</string>
 </resources>
