Added quads and prison squats page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="title_activity_pectorals">pectorals</string>
     <string name="title_activity_planks">planks</string>
     <string name="title_activity_pushups">pushups</string>
+    <string name="title_activity_prisonsquats">prisonsquats</string>
+    <string name="title_activity_quads">quads</string>
 </resources>
