--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="title_activity_pushups">pushups</string>
     <string name="title_activity_prisonsquats">prisonsquats</string>
     <string name="title_activity_quads">quads</string>
+    <string name="title_activity_regularpushups">regularpushups</string>
 </resources>
