Added russian twists page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="title_activity_prisonsquats">prisonsquats</string>
     <string name="title_activity_quads">quads</string>
     <string name="title_activity_regularpushups">regularpushups</string>
+    <string name="title_activity_russiantwists">russiantwists</string>
 </resources>
