--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="title_activity_quads">quads</string>
     <string name="title_activity_regularpushups">regularpushups</string>
     <string name="title_activity_russiantwists">russiantwists</string>
+    <string name="title_activity_scissorjacks">scissorjacks</string>
 </resources>
