Added seal jacks page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="title_activity_regularpushups">regularpushups</string>
     <string name="title_activity_russiantwists">russiantwists</string>
     <string name="title_activity_scissorjacks">scissorjacks</string>
+    <string name="title_activity_sealjacks">sealjacks</string>
 </resources>
