--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="title_activity_russiantwists">russiantwists</string>
     <string name="title_activity_scissorjacks">scissorjacks</string>
     <string name="title_activity_sealjacks">sealjacks</string>
+    <string name="title_activity_shoulders">shoulders</string>
 </resources>
