Added sit ups page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="title_activity_scissorjacks">scissorjacks</string>
     <string name="title_activity_sealjacks">sealjacks</string>
     <string name="title_activity_shoulders">shoulders</string>
+    <string name="title_activity_situps">situps</string>
 </resources>
