Added squats page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="title_activity_sealjacks">sealjacks</string>
     <string name="title_activity_shoulders">shoulders</string>
     <string name="title_activity_situps">situps</string>
+    <string name="title_activity_squats">squats</string>
 </resources>
