Added tricep dips page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="title_activity_stepups">stepups</string>
     <string name="title_activity_supermans">supermans</string>
     <string name="title_activity_times">times</string>
+    <string name="title_activity_tricepdips">tricepdips</string>
 </resources>
