Added tricep push ups page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="title_activity_supermans">supermans</string>
     <string name="title_activity_times">times</string>
     <string name="title_activity_tricepdips">tricepdips</string>
+    <string name="title_activity_triceppushups">triceppushups</string>
 </resources>
