--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="title_activity_times">times</string>
     <string name="title_activity_tricepdips">tricepdips</string>
     <string name="title_activity_triceppushups">triceppushups</string>
+    <string name="title_activity_triceps">triceps</string>
 </resources>
