--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="title_activity_tricepdips">tricepdips</string>
     <string name="title_activity_triceppushups">triceppushups</string>
     <string name="title_activity_triceps">triceps</string>
+    <string name="title_activity_wallsits">wallsits</string>
 </resources>
