Added wide armed push ups page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="title_activity_triceppushups">triceppushups</string>
     <string name="title_activity_triceps">triceps</string>
     <string name="title_activity_wallsits">wallsits</string>
+    <string name="title_activity_widearmedpushups">widearmedpushups</string>
 </resources>
