Added workouts page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="title_activity_widearmedpushups">widearmedpushups</string>
     <string name="title_activity_wideleggedsquats">wideleggedsquats</string>
     <string name="title_activity_windmills">windmills</string>
+    <string name="title_activity_workouts">workouts</string>
 </resources>
